<resources>
    <string name="app_name">All News</string>
    <string name="textview">TextView</string>
    <string name="newsimage">newsImage</string>
    <string name="image">image</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textView4">-----------------------------------------------------------------------------------------------------------</string>
</resources>