<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/titleBackground"
            android:text="@string/textview"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@color/titleBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="571dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/textview1"
                android:textColor="#455A64" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:paddingTop="10dp"
                    android:text="@string/textview2"
                    android:textColor="#455A64"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:paddingBottom="10dp"
                    android:text="@string/textview3"
                    android:textColor="#455A64"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:paddingBottom="5dp"
            android:text="@string/textView4" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>